content/posts/loadbalanced and autoscaled nginx instances on aws using terraform/deployment/ig.tf
resource "aws_internet_gateway" "ig" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    "Name" = "tutorial ig"
  }
}
