content/posts/loadbalanced and autoscaled nginx instances on aws using terraform/deployment/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block       = var.vpc_cidr
  instance_tenancy = "default"

  tags = {
    "Name" = "tutorial vpc"
  }
}
